--- a/static/styles.css
+++ b/static/styles.css
@@ -56,7 +56,7 @@
 }
 #fsection::before{
     content:"";
-    background: url('/static/images/services.png') no-repeat center center/cover;
+    background: url('./images/services.png') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 72%;
@@ -137,7 +137,7 @@
 }
 #contact::before{
     content: "";
-    background: url('/static/images/spicess.jpg') no-repeat center center/cover;
+    background: url('./images/spicess.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
