--- a/static/styles.css
+++ b/static/styles.css
@@ -56,7 +56,7 @@
 }
 #fsection::before{
     content:"";
-    background: url('https://github.com/arakka9676/foodwebsite.github.io/blob/main/static/images/services.png') no-repeat center center/cover;
+    background: url('./images/services.png') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 72%;
