--- a/static/styles.css
+++ b/static/styles.css
@@ -56,7 +56,7 @@
 }
 #fsection::before{
     content:"";
-    background: url('./images/services.jpg') no-repeat center center/cover;
+    background: url('./images/pizza.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 72%;
